[gd_scene load_steps=4 format=3 uid="uid://icknkvpous3e"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_uyjxv"]

[sub_resource type="Environment" id="Environment_n1cgp"]
background_mode = 3
ambient_light_source = 1
reflected_light_source = 1
glow_enabled = true
glow_levels/1 = 16.0
glow_levels/2 = 16.0
glow_intensity = 1.5
glow_strength = 2.0
glow_blend_mode = 1
glow_hdr_luminance_cap = 0.01
fog_light_energy = 8.69
fog_sun_scatter = 1.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_0xo6x"]
auto_exposure_enabled = true
auto_exposure_max_sensitivity = 100.0

[node name="Menu" type="Node2D"]
script = ExtResource("1_uyjxv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 431.0
offset_top = 223.0
offset_right = -431.0
offset_bottom = -223.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address to Join Here"
alignment = 1

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "In the same Network"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Characters/Player.tscn", "res://Levels/level_01.tscn")
spawn_path = NodePath("..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_n1cgp")
camera_attributes = SubResource("CameraAttributesPractical_0xo6x")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_pressed"]
